# cxx-aux

./: .clang-format  .clang-format-ignore  .clangd  .gitignore  API_GUIDE.md  CMakeLists.txt  README.en.md  README.md  build.sh  build_debug.sh
.github/workflows/: ci.yml  coverage  sync_mirror.yml
cmake/: fetch_content.cmake  fetch_content_googletest.cmake
doc/cpp_memory_leak/: 001_refactor_logic_to_static.md  002_refactor_char_operation_to_utility.md  003_refactor_multi_fill_to_single_expression.md  004_usage_of_static_local.md  005_17s_optional.md  006_17s_any.md  007_14s_exchange.md  008_17s_fold_expression.md  009_lambda_rather_than_bind.md  010_17s_invoke.md  011_member_function_factory.md  012_17s_constexpr_if.md  013_17s_if_with_initializer.md  014_17s_nested_namespace.md  015_17s_structured_binding_declaration.md  018_default_initialization.md
example/bit/: README.md  bit.cpp
example/cast/: README.md  dyn_cast.cpp  dyn_cast_aux_type.cpp  type_id.cpp  value.cpp
example/idiom/: README.md  pimpl_inline_storage.cpp  pimpl_multiple_inheritance.cpp  pimpl_traditional.cpp
example/memory/: README.md  layout_bit_mapping.cpp  layout_stack.cpp  memory_pool_uniform.cpp  object_pool.cpp
example/string/: README.md  concat_buffer.cpp  flat_string.cpp  string_table.cpp
include/binary/: binary_decoder.h  binary_file.h  buffer.h  elf.h  elf_macro.h  elf_parser.h  file.h
include/binary/elf/: elf.h  elf_file.h  elf_macro.h
include/compiler/type_system/: type.h
include/cxxaux/binary/: binary_decoder.h  file.h
include/cxxaux/binary/elf/: elf.h  elf_macro.h
include/cxxaux/compiler/type_system/: type.h
include/cxxaux/pool/: memory_pool_uniform.h  object_pool.h
include/cxxaux/utility/: guard.h  logger_wrapper.h  logger_wrapper_simple.h  logger_wrapper_spdlog.h  memory_pool.h  pimpl.h  string_table.h
include/estd/: bit.h  concurrency.h  consts.h  factory.h  flat_vector.h  integer.h  maybe_owned.h  memory.h  meta.h  simple_any.h  types.h  utility.h  utils.h
include/estd/__bit/: bit_count.h  bit_get.h  bit_hl_dim.h  bit_pow2.h  bit_set_reset.h
include/estd/__concurrency/: is_mutex_like.h  mutex_silent.h  thread_safe_wrapper.h
include/estd/__container/: flat_vector.h  integer.h  maybe_owned.h  small_vector.h
include/estd/__memory/: layout_bit_mapping.h  layout_stack.h  memory_pool_uniform.h  object_pool.h
include/estd/__meta/: add_const_as.h  array.h  has_member.h  is_iterable.h  operators.h  remove_cvref.h  system.h
include/estd/__ranges/: all_view.h  filter_view.h  owning_view.h  range_adaptor_closure.h  ref_view.h  subrange.h  take_view.h  transform_view.h  view_interface.h  views.h
include/estd/__utility/: bits_of.h  bytes_of.h  disabled_copy_move.h  numeric_type.h  overloaded.h  type_name.h
include/estd/algorithm/: fill.h
include/estd/cast/: dyn_cast.h  dyn_cast_variant.h  type_id.h  value.h
include/estd/container/: range.h
include/estd/dl/: dl_load.h  dynamic_library.h
include/estd/idiom/: guard.h  pimpl.h
include/estd/memory/: layout_bit_mapping.h  layout_stack.h  object_pool.h
include/estd/meta/: fill.h  has_member.h  meta.h  range.h  system.h  void.h
include/estd/pattern/: factory.h
include/estd/string/: algorithm.h  concat_buffer.h  flat_string.h  small_string.h  string_table.h  string_traits.h
include/estd/string/__algorithm/: append.h  (+3 more)
include/experiment/algorithm/: fill.h
include/experiment/container/: range.h
include/experiment/dl/: dl_load.h
include/experiment/pattern/: factory.h
lib/: CMakeLists.txt
lib/binary/: CMakeLists.txt  elf.cpp
lib/binary/elf/: elf.cpp  elf.h  elf_file.cpp  elfn.h  program.cpp  section.cpp
script/: git-config.sh
script/git/: git-commit-template
script/git/hooks/: commit-msg
src/: CMakeLists.txt
src/binary/elf/: elf.cpp  elfn.h  program.cpp  section.cpp
src/utility/: CMakeLists.txt  memory_pool.cpp
support/: CMakeLists.txt
support/binary/: CMakeLists.txt  elf.cpp  elf_parser.cpp
support/binary/elf/: section.cpp
support/estd/: CMakeLists.txt
support/estd/src/: CMakeLists.txt
support/estd/unittest/: CMakeLists.txt  any_test.cpp  dl_test.cpp  exchange_test.cpp  factory_test.cpp  invoke_test.cpp  utils_test.cpp
support/estd/unittest/dl/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt
tests/binary/: CMakeLists.txt  binary_decoder_test.cpp  buffer_test.cpp  elf_test.cpp  main.cpp
tests/cpp/: CMakeLists.txt  fold_expression_test.cpp
tests/estd/: CMakeLists.txt  any_test.cpp  factory_test.cpp  fill_range_test.cpp  fold_expression_test.cpp  invoke_test.cpp  main.cpp  structured_binding_declaration_test.cpp
tests/estd/algorithm/: fill_range_test.cpp
tests/estd/bit/: bit_count_test.cpp  bit_get_test.cpp  bit_hl_dim_test.cpp  bit_pow2_test.cpp  bit_set_reset_test.cpp
tests/estd/cast/: dyn_cast_variant_test.cpp  type_id_test.cpp  value_test.cpp
tests/estd/concurrency/: mutex_silent_test.cpp  thread_safe_wrapper_test.cpp
tests/estd/container/: flat_vector_test.cpp  integer_test.cpp  maybe_owned_test.cpp  small_vector_test.cpp
tests/estd/dl/: CMakeLists.txt  al_sum.cpp  dl_load_test.cpp  dl_sum.cpp  dll0.cpp  dll1.cpp  test.cpp
tests/estd/idiom/: guard_test.cpp  pimpl_test.cpp
tests/estd/memory/: layout_bit_mapping_test.cpp  object_pool_test.cpp
tests/estd/meta/: array_test.cpp  has_member_test.cpp  operators_test.cpp
tests/estd/pattern/: factory_test.cpp
tests/estd/ranges/: all_view_test.cpp  filter_view_test.cpp  owning_view_test.cpp  range_adaptor_closure_test.cpp  ref_view_test.cpp  subrange_test.cpp  take_view_test.cpp  transform_view_test.cpp  view_interface_test.cpp
tests/estd/string/: append_test.cpp  concat_buffer_test.cpp  flat_string_test.cpp  lazy_views_test.cpp  replace_test.cpp  small_string_test.cpp  string_table_test.cpp  string_traits_test.cpp
tests/estd/utility/: bits_of_test.cpp  bytes_of_test.cpp  disabled_copy_move_test.cpp  numeric_type_test.cpp  overloaded_test.cpp  type_name_test.cpp
tests/pool/: CMakeLists.txt  object_pool_test.cpp
tests/utility/: CMakeLists.txt  guard_test.cpp  memory_pool_test.cpp  pimpl_test.cpp
(+17 files in other folders)
