project(estd_test)

list(APPEND SRC_FILES algorithm/fill_range_test.cpp)
list(APPEND SRC_FILES bit/bit_count_test.cpp)
list(APPEND SRC_FILES bit/bit_get_test.cpp)
list(APPEND SRC_FILES bit/bit_hl_dim_test.cpp)
list(APPEND SRC_FILES bit/bit_pow2_test.cpp)
list(APPEND SRC_FILES bit/bit_set_reset_test.cpp)
list(APPEND SRC_FILES cast/dyn_cast_variant_test.cpp)
list(APPEND SRC_FILES cast/type_id_test.cpp)
list(APPEND SRC_FILES cast/value_test.cpp)
list(APPEND SRC_FILES concurrency/mutex_silent_test.cpp)
list(APPEND SRC_FILES concurrency/thread_safe_wrapper_test.cpp)
list(APPEND SRC_FILES container/flat_vector_test.cpp)
list(APPEND SRC_FILES container/integer_test.cpp)
list(APPEND SRC_FILES container/maybe_owned_test.cpp)
list(APPEND SRC_FILES dl/dl_load_test.cpp)
list(APPEND SRC_FILES idiom/pimpl_test.cpp)
list(APPEND SRC_FILES memory/layout_bit_mapping_test.cpp)
list(APPEND SRC_FILES memory/object_pool_test.cpp)
list(APPEND SRC_FILES meta/has_member_test.cpp)
list(APPEND SRC_FILES meta/operators_test.cpp)
list(APPEND SRC_FILES pattern/factory_test.cpp)
list(APPEND SRC_FILES ranges/all_view_test.cpp)
list(APPEND SRC_FILES ranges/filter_view_test.cpp)
list(APPEND SRC_FILES ranges/owning_view_test.cpp)
list(APPEND SRC_FILES ranges/range_adaptor_closure_test.cpp)
list(APPEND SRC_FILES ranges/ref_view_test.cpp)
list(APPEND SRC_FILES ranges/subrange_test.cpp)
list(APPEND SRC_FILES ranges/take_view_test.cpp)
list(APPEND SRC_FILES ranges/transform_view_test.cpp)
list(APPEND SRC_FILES ranges/view_interface_test.cpp)
list(APPEND SRC_FILES string/append_test.cpp)
list(APPEND SRC_FILES string/concat_buffer_test.cpp)
list(APPEND SRC_FILES string/flat_string_test.cpp)
list(APPEND SRC_FILES string/lazy_views_test.cpp)
list(APPEND SRC_FILES string/replace_test.cpp)
list(APPEND SRC_FILES string/string_table_test.cpp)
list(APPEND SRC_FILES string/string_traits_test.cpp)
list(APPEND SRC_FILES utility/bits_of_test.cpp)
list(APPEND SRC_FILES utility/bytes_of_test.cpp)
list(APPEND SRC_FILES utility/disabled_copy_move_test.cpp)
list(APPEND SRC_FILES utility/numeric_type_test.cpp)
list(APPEND SRC_FILES utility/overloaded_test.cpp)
list(APPEND SRC_FILES utility/type_name_test.cpp)

add_subdirectory(dl)

add_executable(estd_test ${SRC_FILES})

target_link_libraries(estd_test GTest::gtest GTest::gtest_main ${CMAKE_DL_LIBS})

gtest_discover_tests(estd_test)
